--- a/casestudy/style.css
+++ b/casestudy/style.css
@@ -1,4 +1,6 @@
 * {
+    margin: 0;
+    padding: 0;
     font-family: Arial, Helvetica, sans-serif;
     box-sizing: border-box;
 }
@@ -61,10 +63,11 @@ body {
 }
 
 header {
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 20px;
+    padding: 7px;
     background-color: #333;
     color: white;
 }
@@ -80,15 +83,10 @@ header h1 {
 h1 {
     border-radius: 100%;
     width: 265px;
+    
 }
 
-#search-form input {
-    width: 300px;
-    padding: 10px;
-    margin-right: 10px;
-    border: none;
-    border-radius: 5px;
-}
+
 
 main {
     padding: 20px;
@@ -133,6 +131,7 @@ main {
 .price {
     color: rgb(242, 109, 14);
     font-size: 30px;
+
 }
 
 .photo-type {
@@ -166,29 +165,31 @@ option {
     text-align: left;
 }
 
-.flex-center p {
-    color: white;
-}
+
+.flex-center {
+        display: flex;
+        justify-content: space-around;
+        width: 40%;
+    }
 
 a {
-    text-decoration: none;
-}
+    border-radius: 35px;
+    cursor: pointer;
+    font-size: 16px;}
 
 .header-search-tv {
     display: flex;
     justify-content: space-between;
     width: 100%;
     align-items: center;
-    margin-left: 550px;
     margin-top: 20px;
 }
 
 .header-search-tv input {
-    width: 350px;
-    height: 40px;
-    border-radius: 12px;
+    width: 444px;
+    height: 58px;
+    display: flex;
 }
-
 .pt-gh {
     width: 100%;
     height: 100%;
@@ -201,11 +202,11 @@ a {
     margin: 10px;
     text-align: center;
     background-color: #eee;
-    width: 100%;
+    width: 162%;
 }
 
 .cart input {
-    width: 20px;
+    width: 40px;
 }
 
 .cart-pr {
@@ -221,6 +222,8 @@ a {
 
 .cart-pr p {
     width: 18%;
+   
+
 }
 
 h1 {
@@ -264,4 +267,60 @@ form button {
 .ontop img {
     width: 100%;
     height: 100%;
+}
+
+.lb-information .search {
+    margin-top: 50px;
+    margin-right: 800px;
+    border: none;
+}
+
+.search-tv {
+    display: flex;
+    border: 1px solid whitesmoke;
+    border-radius:5px;
+    margin-left: 180px;
+}
+
+.btn-search{
+    margin-left: -10px;
+    border: none;
+    border-radius: 5px;
+    width: 70px;
+}
+
+.product-information{
+    display: flex;
+    align-items: center;
+}
+.product-information > img {
+    width: 100px;
+    height: 100px;
+}
+.ButtonDelete {
+    text-align: center;
+}
+.ButtonBuy {
+    display: block;
+    width: 100%;
+    text-align: center;
+}
+.ButtonBuy button {
+    width: 300px;
+    height: 60px;
+    font-size: 20px;
+    font-weight: 800;
+    color: white;
+    background-color: rgb(19, 200, 19);
+    border-radius: 10px;
+    border: none;
+}
+.ButtonBuy button:hover {
+    width: 300px;
+    height: 60px;
+    font-size: 20px;
+    font-weight: 800;
+    color: rgba(255, 255, 255, 0.762);
+    background-color: rgb(13, 169, 13);
+    box-shadow: 0 0 30px rgba(33,33,33,.2); 
 }
